[package]
name = "cu-feetech-demo"
description = "An example application demonstrating the cu_feetech bridge with a SO-100/SO-101 Feetech servo arm."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "cu-feetech-demo"
path = "src/main.rs"

[dependencies]
cu29 = { git = "https://github.com/copper-project/copper-rs.git", branch = "master" }
cu-linux-resources = { git = "https://github.com/copper-project/copper-rs.git", branch = "master" }
cu-feetech = { git = "https://github.com/copper-project/copper-rs.git", branch = "master" }
serde = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["bincode", "serde", "cu-linux-resources"]
