[package]
name = "cu-gnss-ublox-demo"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
cu29 = { git = "https://github.com/copper-project/copper-rs.git", branch = "master", features = ["log-level-debug"] }
cu-gnss-ublox = { git = "https://github.com/copper-project/copper-rs.git", branch = "master" }
cu-gnss-payloads = { git = "https://github.com/copper-project/copper-rs.git", branch = "master" }
cu29-export = { git = "https://github.com/copper-project/copper-rs.git", branch = "master", optional = true }
cu-linux-resources = { git = "https://github.com/copper-project/copper-rs.git", branch = "master" }
tempfile = { workspace = true }
serde = { workspace = true }
ctrlc = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["serde", "cu-linux-resources"]

[features]
default = []
logexport = ["dep:cu29-export", "cu-gnss-ublox/reflect"]
